Fix RPC layer issue witch was affecting the ability of android handled device to parse message sent wearable device

--- a/WearPrez/platforms/android/build.gradle
+++ b/WearPrez/platforms/android/build.gradle
@@ -207,7 +207,7 @@ android {
     } else if (!cdvVersionCode) {
       def minSdkVersion = cdvMinSdkVersion ?: privateHelpers.extractIntFromManifest("minSdkVersion")
       // Vary versionCode by the two most common API levels:
-      // 14 is ICS, which is the lowest API level for many apps.
+      // 14 is ICS, which is the lowest API level for many android.
       // 20 is Lollipop, which is the lowest API level for the updatable system webview.
       if (minSdkVersion >= 20) {
         defaultConfig.versionCode += 9
