--- a/WearPrez/platforms/ios/WearPrez/WearPrez-Info.plist
+++ b/WearPrez/platforms/ios/WearPrez/WearPrez-Info.plist
@@ -49,7 +49,7 @@
       </dict>
     </dict>
     <key>CFBundleIdentifier</key>
-    <string>me.kadary.apps.wearprez</string>
+    <string>android.wearprez</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
