--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "me.kadary.apps.wearprez"
+        applicationId "me.kadary.android.wearprez"
         minSdkVersion 20
         targetSdkVersion 22
         versionCode 1
