--- a/WearPrez/platforms/android/AndroidManifest.xml
+++ b/WearPrez/platforms/android/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 
-        <service android:name="me.kadary.android.gestures.recorder.GestureRecorder">
+        <service android:name="me.kadary.android.gestures.recorder.RemoteWearableEvent">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
